2022-08-03 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* Merge parser branch to trunk.

2022-08-03 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* src/SDCCerr.h,
	  src/SDCCerr.c,
	  src/SDCC.y:
	  Allow more attribute arguments, warn on unknown attributes.

2022-08-03 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* src/SDCC.y:
	  Allow attributes in direct declarators. Avoiding grammar conflicts for K&R function definitions made this a bit more complex.

2022-08-03 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* src/SDCC.y,
	  src/SDCCsymt.c,
	  src/SDCCsymt.h,
	  support/regression/tests/bug-2664.c:
	  Fix bug #2664.
	* support/valdiag/tests/bug-3009.c,
	  support/valdiag/tests/bug-3011.c:
	  Ignore a warning that is irrelevant for these test cases.

2022-08-02 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* src/SDCC.y,
	  src/SDCCast.c,
	  src/SDCCsymt.c,
	  src/SDCCsymt.h,
	  support/regression/tests/bug-2222.c,
	  support/regression/tests/bug-2263.c,
	  support/regression/tests/bug-2320.c,
	  support/regression/tests/bug-2629.c,
	  support/regression/tests/bug-2956.c,
	  support/regression/tests/bug-3079.c,
	  support/regression/tests/bug-3081.c,
	  support/regression/tests/bug-3093.c,
	  support/regression/tests/bug-3135.c,
	  support/regression/tests/bug-3169.c,
	  support/regression/tests/bug-3215.c:
	  Fix handling of pre-C2X function declarators without prototype, RFE #776.

2022-08-02 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* Merge parser branch to trunk.

2022-08-02 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* src/SDCC.y,
	  src/SDCCsymt.c,
	  support/regression/tests/auto.c,
	  support/valdiag/tests/bug-3464.c:
	  C2X auto, RFE #849, fix bug #3464.

2022-08-02 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* src/SDCC.y,
	  src/SDCCast.h,
	  src/SDCCast.c,
	  .version,