@@ -1,3 +1,10 @@
+2022-08-04 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>
+
+	* support/util/dbuf_string.c:
+	  Code cleanup.
+	* src/SDCCglue.c:
+	  Fix area directive for sseg, patch by Tarn.
+
 2022-08-03 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>
 
 	* Merge parser branch to trunk.
